--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@discordjs/rest": "^0.3.0",
     "discord-api-types": "^0.31.1",
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "jsdom": "^19.0.0"
   }
 }
