--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord-api-types": "^0.31.1",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
+    "googleapis": "^100.0.0",
     "jsdom": "^19.0.0"
   }
 }
