--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "@discordjs/voice": "^0.9.0",
     "discord-api-types": "^0.31.1",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "googleapis": "^100.0.0",
-    "jsdom": "^19.0.0"
+    "html-escaper": "^3.0.3",
+    "jsdom": "^19.0.0",
+    "libsodium-wrappers": "^0.7.10",
+    "node-fetch": "^2.6.7",
+    "play-dl": "^1.9.4"
   }
 }
